refactor(ultrasonido): Reorganización del código
- Todo el código fuente, encabezados, y el archivo Makefile se movió a una nueva carpeta src.
- Se añadió un nuevo .h para delays en el orden de los milisegundos.
- El programa principal (antes ultrasound.c) se dividió en dos archivos de código fuente: main.c con el programa principal y ultrasound.c con las funciones de control del sensor.
- Se modificó el archivo Makefile para que genere los objetos de los archivos utils y main.
- Se renombraron funciones en el archivo de utils.c y se escribió la documentación correspondiente.

--- a/laboratorios/lab2/ultrasonic/src/Makefile
+++ b/laboratorios/lab2/ultrasonic/src/Makefile
@@ -1,7 +1,7 @@
 
 CC=avr-gcc
-OBJETOS=ultrasound.o serial.o utils.o
-APP=ultrasound
+OBJETOS=ultrasound.o serial.o utils.o main.o
+APP=ultrasound-app
 CFLAGS=-Os -DF_CPU=16000000UL -mmcu=atmega328p 
 LDFLAGS=-mmcu=atmega328p
 FIRMWARE=imagen.hex
@@ -25,4 +25,4 @@ flash:
 	avrdude -p atmega328p -c arduino -P /dev/ttyUSB0 -b 57600 -D -U flash:w:$(FIRMWARE):i
 	
 clean:
-	rm ultrasound.o $(APP) $(FIRMWARE)
+	rm $(APP) $(FIRMWARE) ultrasound.o utils.o main.o
