--- a/laboratorios/lab4/test-potenciometro/Makefile
+++ b/laboratorios/lab4/test-potenciometro/Makefile
@@ -1,5 +1,5 @@
 CC=avr-gcc
-OBJETOS=main.o adc.o
+OBJETOS=main.o adc.o serial.o
 APP=adc-app
 CFLAGS=-Os -DF_CPU=16000000UL -mmcu=atmega328p 
 LDFLAGS=-mmcu=atmega328p
